# src/models/server.ts
@@ -33,6 +33,7 @@ import {
   workStationRouter,
   equipmentRouter,
   contractRoutes,
+  consortiumRoutes,
 } from '../routes';
 import AppError from '../utils/appError';
 import globalErrorHandler from '../middlewares/error.middleware';
@@ -81,6 +82,7 @@ class Server {
     workStation: `/${process.env.ROUTE}/workStation`,
     equipment: `/${process.env.ROUTE}/equipment`,
     contract: `/${process.env.ROUTE}/contract`,
+    consortium: `/${process.env.ROUTE}/consortium`,
   };
 
   constructor() {
@@ -147,6 +149,7 @@ class Server {
     this.app.use(this.path.workStation, workStationRouter);
     this.app.use(this.path.equipment, equipmentRouter);
     this.app.use(this.path.contract, contractRoutes);
+    this.app.use(this.path.consortium, consortiumRoutes);
     this.app.use(docs);
     this.app.all('*', (req: Request, res: Response, next: NextFunction) => {
       res.locals.pageNotFound = this.rootDir + '/404_page/index.html';
