# src/routes/consortium.routes.ts
@@ -1,0 +1,20 @@
+import { Router } from 'express';
+import authenticateHandler from '../middlewares/auth.middleware';
+import {
+  createConsortium,
+  deleteById,
+  getAllConsortium,
+  getConsortiumById,
+  updateById,
+} from '../controllers';
+import { _admin_role } from '../middlewares/role.middleware';
+const router = Router();
+router.use(authenticateHandler);
+//Admin role
+router.use(_admin_role);
+router.post('/', createConsortium);
+router.get('/all', getAllConsortium);
+router.get('/:id', getConsortiumById);
+router.patch('/:id', updateById);
+router.delete('/:id', deleteById);
+export default router;
